Mejora en el manejo de errores de Rooms
